# sensor-collector

./: .gitignore  CLAUDE.md  pyproject.toml
tick2/: pyproject.toml  test_model_cycle.py
tick2/configs/: benchmark.yaml  machines.yaml
tick2/notebooks/: 01_data_exploration.ipynb  02_zero_shot_benchmark.ipynb  03a2_finetune_granite_ttm_ctx1024.ipynb  03a_finetune_granite_ttm.ipynb  03b_finetune_chronos2.ipynb  03c_finetune_moirai.ipynb  03d_finetune_timesfm.ipynb
tick2/notebooks/output/01/: category_counts.csv  correlations_ares-comp-10.csv  correlations_ares.csv  correlations_chameleon.csv  correlations_homelab.csv  target_statistics.csv
tick2/notebooks/output/02/: chronos2-base.csv  chronos2-small.csv  granite-ttm.csv  moirai-1.1-small.csv  timesfm-2.5.csv  toto.csv  zero_shot_results.csv  zero_shot_table.tex
tick2/notebooks/output/02/cpu/: chronos2-small.csv  granite-ttm.csv  timesfm-2.5.csv
tick2/notebooks/output/03/: .gitignore  chronos2_ft_combined_results.csv  chronos2_ft_combined_table.tex  granite_ttm_ft_comparison_results.csv  granite_ttm_ft_comparison_table.tex  granite_ttm_ft_ctx1024_comparison_results.csv  granite_ttm_ft_ctx1024_comparison_table.tex  granite_ttm_ft_ctx1024_meta_combined.csv  granite_ttm_ft_training_meta_combined.csv  moirai_ft_combined_results.csv  moirai_ft_combined_table.tex  timesfm_ft_combined_table.tex
tick2/notebooks/output/03/chronos2_ft/combined/combined/combined_best/: adapter_config.json  adapter_model.safetensors
tick2/notebooks/output/03/gpu/: chronos2-ft-all_combined.csv  granite-ttm-ft-E2_mix10_combined.csv  granite-ttm-ft-E3_mix30_combined.csv  granite-ttm-ft-E4_ctx1024_uni_combined.csv  granite-ttm-ft-E5_ctx1024_mix10_combined.csv  granite-ttm-ft-E6_ctx1024_h192_uni_combined.csv  granite-ttm-ft-E7_ctx1024_h192_mix10_combined.csv  granite-ttm-ft-ctx1024_combined.csv  granite-ttm-ft_combined.csv  moirai-1.1-ft-E1_univariate_combined.csv  moirai-1.1-ft-E2_cov10_combined.csv  moirai-1.1-ft-E3_cov20_combined.csv  timesfm-2.5-ft-E1_uni_uni_combined.csv  timesfm-2.5-ft-E2_uni_xreg_combined.csv  timesfm-2.5-ft-E3_uni_xreg_lr5_combined.csv  timesfm-2.5-ft-all_combined.csv
tick2/notebooks/output/03/granite_ttm_ft/combined/E1_univariate/combined/: combined_loss_history.csv
tick2/notebooks/output/03/granite_ttm_ft/combined/E1_univariate/combined/checkpoints/checkpoint-3477/: config.json  model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
tick2/notebooks/output/03/granite_ttm_ft/combined/E1_univariate/combined/checkpoints/checkpoint-34770/: model.safetensors  (+4 more)
tick2/notebooks/output/03/granite_ttm_ft/combined/E2_mix10/combined/: combined_loss_history.csv
tick2/notebooks/output/03/granite_ttm_ft/combined/E3_mix30/combined/: combined_loss_history.csv
tick2/notebooks/output/03/granite_ttm_ft/combined/E3_mix30/combined/best/: model.safetensors
tick2/src/tick2/: __init__.py
tick2/src/tick2/benchmark/: metrics.py  reporting.py  runner.py  timing.py
tick2/src/tick2/data/: preprocessing.py  splits.py
tick2/src/tick2/data/adapters/: base.py  common.py
tick2/src/tick2/finetuning/: __init__.py  base.py  chronos2_ft.py  data_prep.py  evaluate.py  granite_ft.py  moirai_ft.py  timesfm_ft.py
tick2/src/tick2/models/: base.py  chronos2.py  granite.py  moirai.py  registry.py  timesfm.py  toto.py
tick2/src/tick2/utils/: colab.py  gpu.py
tick2/tests/: smoke_test_finetune.py  test_colab_utils.py  test_finetuning.py  test_metrics.py  test_preprocessing.py  test_splits.py
(+121 files in other folders)
