[project]
name = "chronotick2"
version = "0.1.0"
description = "ChronoTick 2: Fine-tuning TSFMs for clock drift prediction"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "torch>=2.1",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tick2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]

# Model-specific dependencies are NOT declared here because:
# - TimesFM 2.5 must be installed from source (not on PyPI)
# - Model deps can conflict with each other
# - Colab notebooks install per-model deps individually
#
# Install commands per model (for reference):
#   Chronos-2:  pip install "chronos-forecasting[extras]>=2.2"
#   TimesFM:    git clone https://github.com/google-research/timesfm && pip install -e ".[torch,xreg]"
#   Moirai:     pip install "uni2ts>=2.0"
#   Toto:       pip install toto-ts
#   Granite:    pip install "granite-tsfm>=0.3.3"
#   AutoGluon:  pip install "autogluon-timeseries>=1.5"  (for Chronos-2 fine-tuning)
#
# Fine-tuning additionally requires (per model):
#   Granite FT: granite-tsfm + transformers + datasets
#   Chronos FT: chronos-forecasting[extras]
#   Moirai FT:  uni2ts + pytorch-lightning
#   TimesFM FT: timesfm from source (finetuning submodule)

[dependency-groups]
dev = ["pytest>=8.0", "pyright>=1.1", "ruff>=0.4"]
